# ctall

./: .gitignore  .gitmodules  Assets.cpp  Assets.h  CMakeLists.txt  Game.cpp  Game.h  GameObject.h  Input.h  LICENSE  Makefile  MySDLUtils.cpp  MySDLUtils.h  Player.cpp  Player.h  README.md  ScrollComponent.cpp  ScrollComponent.h  Scroller.cpp  Scroller.h  Wall.cpp  Wall.h  constants.h  main.cpp  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
assets-src/: generate.sh  oralayers2png  player-down.aseprite  player-down.ora  player-up.aseprite  player-up.ora  player.aseprite  player.ora  wall.aseprite  wall.ora
assets/backgrounds/: bg.tmx  blm.tmx  futuristic-1.tmx  futuristic-2.tmx  start.tmx
ctall/: __init__.py  background.py  bonus.py  constants.py  main.py  player.py  pool.py  poolable.py  scrollcomponent.py  textdrawer.py  wall.py
images/: player.aseprite  wall.aseprite
images-src/: generate.sh  player-up.aseprite  player.aseprite  wall.aseprite
src/: Assets.cpp  Assets.h  Background.cpp  Background.h  Bonus.cpp  Bonus.h  BuildConfig.h.in  CMakeLists.txt  CtallApp.cpp  CtallApp.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GameScreen.cpp  GameScreen.h  Player.cpp  Player.h  Pool.h  ScrollComponent.cpp  Scroller.cpp  Scroller.h  Section.cpp  Section.h  StartScreen.cpp  StartScreen.h  TextDrawer.cpp  TextDrawer.h  Wall.cpp  Wall.h  World.cpp  World.h  WorldImpl.cpp  WorldImpl.h  constants.h  main.cpp
src/tools/: App.cpp  App.h  Mask.cpp  Mask.h  MaskedTexture.cpp  MaskedTexture.h  Menu.cpp  Menu.h  Pool.h  Random.h  Screen.cpp  Screen.h  TextDrawer.cpp  TextDrawer.h
tests/: CMakeLists.txt  MaskTests.cpp  PoolTests.cpp  __init__.py  test_ctall.py
